--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <!-- Daisy UI CDN-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.24/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Adding Font Family -->
     <style>
         .font-poppins {
             font-family: "Poppins", sans-serif;
         }
     </style>
+    <!-- Adding Primary color from tailwind, use [bg-](bike-primary) [bg-bike-primary] -->
     <script>
         tailwind.config = {
             theme: {
@@ -26,6 +28,8 @@
                     colors: {
                         clifford: '#da373d',
                         'bike-primary': '#E76F51',
+                        'bike-primary-bg': '#fcf0ed',
+                        
                     }
                 }
             }
@@ -35,9 +39,10 @@
 
 <body class="font-poppins">
     <!-- Header Section -->
-    <header>
-        <header class="md:container mx-auto">
-            <!-- nav start -->
+
+    <header class="md:container mx-auto">
+        <!-- nav start -->
+        <nav>
             <div class="navbar bg-base-100">
                 <div class="flex-1">
                     <div class="dropdown">
@@ -70,15 +75,106 @@
                     <a class="btn bg-bike-primary text-white">Login</a>
                 </div>
             </div>
-            <!-- nav end -->
+        </nav>
+        <!-- nav end -->
 
-        </header>
+        <!-- Slider/ Carousel start -->
+        <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
+            <!-- slide 01 -->
+            <div id="slide1" class="carousel-item relative w-full">
+                <!-- customize start -->
+                <div class="flex flex-col lg:flex-row lg:p-24 p-12">
+                    <!-- text content -->
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <!-- img content -->
+                    <div class="flex-1">
+                        <img src="assets/images/slider/bike1.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <!-- customize end -->
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide5" class="btn btn-circle">❮</a>
+                    <a href="#slide2" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+                <!-- customize start -->
+                <div class="flex flex-col lg:flex-row lg:p-24 p-12">
+                    <!-- text content -->
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <!-- img content -->
+                    <div class="flex-1">
+                        <img src="assets/images/slider/bike2.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <!-- customize end -->
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide1" class="btn btn-circle">❮</a>
+                    <a href="#slide3" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide3" class="carousel-item relative w-full">
+                <!-- customize start -->
+                <div class="flex flex-col lg:flex-row lg:p-24 p-12">
+                    <!-- text content -->
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <!-- img content -->
+                    <div class="flex-1">
+                        <img src="assets/images/slider/bike3.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <!-- customize end -->
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide2" class="btn btn-circle">❮</a>
+                    <a href="#slide4" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+            <div id="slide4" class="carousel-item relative w-full">
+                <!-- customize start -->
+                <div class="flex flex-col lg:flex-row lg:p-24 p-12">
+                    <!-- text content -->
+                    <div class="space-y-7 flex-1">
+                        <h2 class="text-6xl font-bold">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco
+                            est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                        <button class="btn bg-bike-primary text-white">Purchase</button>
+                    </div>
+                    <!-- img content -->
+                    <div class="flex-1">
+                        <img src="assets/images/slider/bike4.png" class="w-[400px]" />
+                    </div>
+                </div>
+                <!-- customize end -->
+                <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                    <a href="#slide3" class="btn btn-circle">❮</a>
+                    <a href="#slide1" class="btn btn-circle">❯</a>
+                </div>
+            </div>
+        </div>
+        <!-- Slider/ Carousel end -->
 
-        <!-- Main Section -->
-        <main class="md:container mx-auto"></main>
+    </header>
 
-        <!-- Footer Section -->
-        <footer></footer>
+    <!-- Main Section -->
+    <main class="md:container mx-auto"></main>
+
+    <!-- Footer Section -->
+    <footer></footer>
 </body>
 
 </html>
