--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         clifford: '#da373d',
                         'bike-primary': '#E76F51',
                         'bike-primary-bg': '#fcf0ed',
-                        
+
                     }
                 }
             }
@@ -42,7 +42,7 @@
 
     <header class="md:container mx-auto">
         <!-- nav start -->
-        <nav>
+        <nav class="mb-4">
             <div class="navbar bg-base-100">
                 <div class="flex-1">
                     <div class="dropdown">
@@ -167,6 +167,21 @@
             </div>
         </div>
         <!-- Slider/ Carousel end -->
+        <!-- showing Bike start -->
+        <div class="">
+            <div class="m-6">
+                <h2 class="text-6xl font-bold text-center mb-3">Fetured Bikes In This Year</h2>
+                <h2 class="text-xl text-center text-[#E76F51] font-bold mb-2">Best bike collection</h2>
+                <hr class="w-1/4 mx-auto mb-6">
+            </div>
+            <div class="flex flex-col lg:flex-row gap-3 justify-between p-10px lg:p-20px">
+                <img src="assets/images/others/feature-bike.png" class="grayscale" alt="">
+                <img src="assets/images/others/feature-bike.png" alt="">
+                <img src="assets/images/others/feature-bike.png" class="grayscale" alt="">
+            </div>
+
+        </div>
+        <!-- showing Bike end -->
 
     </header>
 
