--- a/index.html
+++ b/index.html
@@ -195,12 +195,12 @@
                 <!-- card 01 -->
                 <div class="card bg-base-100 shadow-xl">
                     <figure>
-                        <img src="assets/images/others/latest1.png"
-                            alt="Shoes" />
+                        <img src="assets/images/others/latest1.png" alt="Shoes" />
                     </figure>
                     <div class="card-body space-y-5">
                         <h2 class="card-title">Ducati XDIAVEL S-73</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
                         <div class="card-actions">
                             <button class="btn bg-bike-primary text-white">Read More</button>
                         </div>
@@ -209,12 +209,12 @@
                 <!-- card 02 -->
                 <div class="card bg-base-100 shadow-xl">
                     <figure>
-                        <img src="assets/images/others/latest2.png"
-                            alt="Shoes" />
+                        <img src="assets/images/others/latest2.png" alt="Shoes" />
                     </figure>
                     <div class="card-body space-y-5">
                         <h2 class="card-title">Ducati XDIAVEL S-73</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
                         <div class="card-actions">
                             <button class="btn bg-bike-primary text-white">Read More</button>
                         </div>
@@ -223,12 +223,12 @@
                 <!-- card 03 -->
                 <div class="card bg-base-100 shadow-xl">
                     <figure>
-                        <img src="assets/images/others/latest3.png"
-                            alt="Shoes" />
+                        <img src="assets/images/others/latest3.png" alt="Shoes" />
                     </figure>
                     <div class="card-body space-y-5">
                         <h2 class="card-title">Ducati XDIAVEL S-73</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.</p>
                         <div class="card-actions">
                             <button class="btn bg-bike-primary text-white">Read More</button>
                         </div>
@@ -237,10 +237,81 @@
             </div>
         </section>
         <!-- Latest Bike Section end -->
+
+        <!-- Happy Client Start -->
+        <section class="my-24">
+            <h3 class="text-5xl text-center font-bold my-12">Happy <span class="text-[#E76F51]">Clients says</span></h3>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
+                <!-- card 01 -->
+                <div class="card bg-base-100 shadow-xl my-6">
+                    <figure class="px-10 pt-10">
+                        <img src="assets/images/others/user-1.png" alt="Shoes" class="rounded-xl w-1/2" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year.</p>
+                        <!-- rating -->
+                        <div class="rating my-6">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <p class="text-lg font-bold text-[#23a6f0]">Regina Miles</p>
+                        <p class="font-bold">Banker</p>
+                    </div>
+                </div>
+                <!-- card 02 -->
+                <div class="card bg-base-100 shadow-xl my-6">
+                    <figure class="px-10 pt-10">
+                        <img src="assets/images/others/user-2.png" alt="Shoes" class="rounded-xl w-1/2" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year.</p>
+                        <!-- rating -->
+                        <div class="rating my-6">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <p class="text-lg font-bold text-[#23a6f0]">Regina Miles</p>
+                        <p class="font-bold">Banker</p>
+                    </div>
+                </div>
+                <!-- card 03 -->
+                <div class="card bg-base-100 shadow-xl my-6">
+                    <figure class="px-10 pt-10">
+                        <img src="assets/images/others/user-3.png" alt="Shoes" class="rounded-xl w-1/2" />
+                    </figure>
+                    <div class="card-body items-center text-center">
+                        <p>Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year.</p>
+                        <!-- rating -->
+                        <div class="rating my-6">
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked="checked" />
+                            <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
+                        </div>
+                        <p class="text-lg font-bold text-[#23a6f0]">Regina Miles</p>
+                        <p class="font-bold">Banker</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Happy Client End -->
+         
     </main>
 
     <!-- Footer Section -->
     <footer></footer>
+
+
 
 </body>
 
